updated name of the website and edded keywords

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,21 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/webp" href="/src/assets/logo.webp" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tuanis Surf School | Costa Rica</title>
+
+  <meta name="description"
+    content="Learn to surf with Tuanis Surf School in Costa Rica. We offer surf lessons for all levels in the beautiful beaches of Tamarindo and beyond." />
+  <meta name="keywords"
+    content="Tuanis Surf School, surfing Costa Rica, surf lessons, Tamarindo, learn to surf, surf camp Costa Rica, family surf, beginner surf" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
